--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
         </section>
         <section class="space-y-6 pt-10 md:pt-12 text-slate-500">
           <p>
-            OFF-KILTER designs and codes realtime experiences that feel alive, 
-            with precision and imperfection. Things you can feel and connect with. 
-            In the cold medium of software, we interconnect the senses and instill emotion.
+            OFF-KILTER designs and codes realtime animation and audio that feels alive.
+            <br/> 
+            We pursue imperfection through precision and craftmanship,  
+            <br/>
+            interconnecting the senses, 
+            <br/>
+            instilling emotion.
           </p>
         </section>
 
