--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>OFF-KILTER</title>
     <meta
       name="description"
-      content="OFF-KILTER makes procedural audiovisuals with organic complexity"
+      content="OFF-KILTER makes procedural audiovisuals that feel alive"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -80,7 +80,7 @@
         </section>
         <section class="space-y-6 pt-10 md:pt-12 text-slate-500">
           <p>
-            OFF-KILTER designs and codes realtime animation and audio that feels alive.
+            OFF-KILTER designs and codes realtime animation and audio that feel alive.
             <br/> 
             We pursue imperfection through precision and craftmanship,  
             <br/>
