--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
       </a>
         <nav aria-label="Primary">
           <ul class="flex items-center gap-6 text-sm text-white">
+            <!--
             <li>
               <a href="#">
                 ABOUT
               </a>
             </li>
+            -->
             <li>
-              <a href="#">
+              <a href="https://tally.so/r/mRE68p" target="_blank">
                 CONTACT
               </a>
             </li>
