--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <style type="text/tailwindcss">
       @layer base {
         h1 {
-          @apply text-6xl md:text-7xl lg:text-7xl;
+          @apply text-4xl sm:text-5xl md:text-6xl lg:text-7xl;
           font-family: 'Archivo', sans-serif;
           font-variation-settings: 'wdth' 150;
         }
@@ -51,7 +51,7 @@
           <img
             src="assets/LOGO on black-m.png"
             alt="OFF-KILTER logo"
-            class="h-auto w-2/5 max-w-xs sm:max-w-sm md:max-w-md lg:max-w-xl xl:max-w-2xl"
+            class="h-auto w-3/5 max-w-xs sm:max-w-sm md:max-w-md lg:max-w-xl xl:max-w-2xl"
           />
       </a>
         <nav aria-label="Primary">
@@ -82,7 +82,7 @@
         </section>
         <section class="space-y-6 pt-10 md:pt-12 text-slate-500">
           <p>
-            OFF-KILTER designs and codes realtime animation and audio that feel alive.
+            OFF-KILTER designs and codes realtime animation and sound that feel alive.
             <br/> 
             We pursue imperfection through precision and craftmanship,  
             <br/>
