--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
         }
       }
     </style>
-  </head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+    <link rel="manifest" href="/assets/site.webmanifest">  </head>
   <body class="m-0 bg-black">
+    <div id="secondlayer">
+    </div>
     <header class="fixed inset-x-0 top-0 z-50 bg-black backdrop-blur">
       <div class="flex w-full items-center justify-between pl-4 pr-4 py-0">
         <a href="/">
